<resources>
    <string name="application_name">Biblivirti</string>
    <string name="application_name_full">Biblivirti AVAM</string>
    <string name="application_version">Versão 1.6.17</string>
    <string name="activity_splash_footer_text">© 2016 - 2017 Sysmob, Inc. Todos os direitos reservados.</string>
    <string name="activity_sobre_footer_text">© 2016 - 2017 Sysmob, Inc. \nTodos os direitos reservados.</string>
    <string name="activity_splsh_logo_description">Biblivirti Logo</string>
    <string name="activity_splash_label">Splash</string>
    <string name="activity_login_label">Login</string>
    <string name="activity_login_hint_email">E-mail de Acesso:</string>
    <string name="activity_login_hint_senha">Senha de Acesso:</string>
    <string name="activity_login_button_entrar">Entrar</string>
    <string name="activity_login_button_recuperar_senha">Esqueci minha senha!</string>
    <string name="activity_login_button_nova_conta">Ainda não membro? CADASTRE-SE AGORA!</string>
    <string name="activity_login_button_facebook">Entrar com Facebook</string>
    <string name="activity_nova_conta_label">Nova Conta</string>
    <string name="activity_nova_conta_hint_email">E-mail (Ex: pedro@gmail.com)</string>
    <string name="activity_nova_conta_hint_senha">Senha</string>
    <string name="activity_nova_conta_hint_confirmar_senha">Confirmar Senha</string>
    <string name="activity_nova_conta_hint_login">Login (Ex: pedrosilva)</string>
    <string name="activity_nova_conta_button_criar_conta">Criar Conta</string>
    <string name="activity_recuperar_senha_label">Recuperar Senha</string>
    <string name="activity_recuperar_senha_button_recuperar_senha">Confirmar E-mail</string>
    <string name="activity_recuperar_senha_text">Confirme seu e-mail para recuperar sua senha de acesso.</string>
    <string name="activity_recuperar_senha_edit_email">E-mail (Ex: pedro@gmailcom)</string>
    <string name="activity_novo_grupo_label">Novo Grupo</string>
    <string name="activity_editar_grupo_label">Editar Grupo</string>
    <string name="activity_novo_grupo_text_image_info_set">Toque na imagem para selecionar uma foto.</string>
    <string name="activity_novo_grupo_text_image_info_unset">Toque na imagem para remover uma foto.</string>
    <string name="activity_editar_perfil_text_image_info_set">Toque na imagem para selecionar uma foto.</string>
    <string name="activity_editar_perfil_text_image_info_unset">Toque na imagem para remover uma foto.</string>
    <string name="activity_novo_grupo_hint_nome_grupo">Nome do Grupo (Ex: Sysmob)</string>
    <string name="activity_novo_grupo_hint_area_interesse">Área de Interesse (Ex: Física)</string>
    <string name="activity_novo_material_label">Novo Matetial</string>
    <string name="activity_novo_material_text_conteudos_relacionados">Conteúdos Relacionados</string>
    <string name="activity_novo_material_hint_descricao">Descrição (Ex: Exercício 01)</string>
    <string name="activity_novo_material_text_mensagem">Material Carregado com sucesso!</string>
    <string name="activity_perfil_text_info_usuario">Informações do Usuário</string>
    <string name="activity_perfil_text_cadastrado_em">Cadastrado em:</string>
    <string name="activity_perfil_text_email">E-mail do Usuário</string>
    <string name="activity_perfil_text_qtd_grupos">Grupos (xx inscrições)</string>
    <string name="activity_perfil_text_login">Login do Usuário</string>
    <string name="activity_perfil_text_nome">Nome do Usuário</string>
    <string name="activity_perfil_text_data_cadastro">dd/mm/yyyy hh:mm</string>
    <string name="adapter_perfil_text_grcnome">Nome do Grupo</string>
    <string name="adapter_perfil_text_aicdesc">Área de Interesse</string>
    <string name="adapter_perfil_text_usclogn">Login do Administrador</string>
    <string name="activity_info_grupo_text_criado_em">Criado em:</string>
    <string name="activity_info_grupo_text_info_grupo">Informações do Grupo</string>
    <string name="activity_info_grupo_text_qtd_membros">Membros (xx inscritos)</string>
    <string name="activity_info_grupo_text_grcnome">Nome do Grupo</string>
    <string name="activity_info_grupo_text_grdcadt">dd/mm/yyyy hh:mm</string>
    <string name="activity_info_grupo_text_aicdesc">Área de Interesse</string>
    <string name="activity_info_grupo_button_sairparticipar_participar">Participar do Grupo</string>
    <string name="activity_info_grupo_button_sairparticipar_sair">Sair do Grupo</string>
    <string name="activity_confirmar_email_text_informativo">Informe o token de confirmação para ativar sua conta no Biblivirti.</string>
    <string name="acitivity_confirmar_email_text_informativo2">Pressione o botão abaixo para reenviar o token de confirmação para seu e-mail.</string>
    <string name="activity_confirmar_email_button_reenviar_token">Reenviar Token</string>
    <string name="activity_confirmar_email_hint_cactokn">Token de Confirmação</string>
    <string name="activity_confirmar_email_button_validar">Validar</string>
    <string name="menu_drawer_grupos">Grupos</string>
    <string name="menu_drawer_perfil">Perfil</string>
    <string name="menu_drawer_notificacoes">Notificações</string>
    <string name="menu_drawer_configuracoes">Configurações</string>
    <string name="menu_drawer_sobre">Sobre</string>
    <string name="menu_drawer_sair">sair</string>
    <string name="drawer_toggle_open">Drawer Toggle Open</string>
    <string name="drawer_toggle_close">Drawer Toggle Close</string>
    <string name="activity_confirmar_email_label">Confirmar E-mail</string>
    <string name="activity_info_grupo_label">Informações do Grupo</string>
    <string name="activity_notificacoes_label">Notificações</string>
    <string name="activity_editar_perfil_label">Editar Perfil</string>
    <string name="activity_perfil_label">Perfil</string>
    <string name="menu_activity_novo_grupo_salvar">Salvar</string>
    <string name="menu_activity_info_grupo_editar">Editar</string>
    <string name="menu_activity_perfil_editar">Editar</string>
    <string name="menu_fragment_grupos_estudo_pesquisar">@string/menu_activity_pesquisar_pesquisar</string>
    <string name="menu_fragment_membros_pesquisar">@string/menu_activity_pesquisar_pesquisar</string>
    <string name="menu_activity_pesquisar_pesquisar">Pesquisar...</string>
    <string name="activity_pesquisar_hint">Pesquisar...</string>
    <string name="activity_pesquisar_label">Pesquisar...</string>
    <string name="adapter_pesquisar_grupos_fragment_button_sair_text">Sair do Grupo</string>
    <string name="adapter_pesquisar_grupos_fragment_button_participar_text">Participar do Grupo</string>
    <string name="activity_confirmar_recuperacao_text_informativo">Informe o token de recuperação para alterar seus dados de acesso.</string>
    <string name="activity_confirmar_recuperacao_hint_rsctokn">Token de Recuperaçao</string>
    <string name="activity_confirmar_recuperacao_button_validar">Validar</string>
    <string name="acitivity_confirmar_recuperacao_text_informativo2">Pressione o botão abaixo para reenviar o token de recuperação para seu e-mail.</string>
    <string name="activity_confirmar_recuperacao_button_reenviar_token">Reenviar Token de Recuperação</string>
    <string name="activity_confirmar_recuperacao_label">Confirmar Recuperação</string>
    <string name="activity_editar_nova_senha_hint_senha">Nova Senha</string>
    <string name="activity_editar_senha_hint_confirmar_senha">Confirmar Senha</string>
    <string name="activity_editar_senha_label">Editar Senha</string>
    <string name="adapter_list_pesquisar_grupos_text_grcnome">Nome do Grupo</string>
    <string name="adapter_list_pesquisar_grupos_text_aicdesc">Área de Interesse</string>
    <string name="adapter_list_pesquisar_grupos_text_usclogn">Login do Adminstrador</string>
    <string name="adapter_list_pesquisar_grupos_button_sair_participar_grupo">Sair do Grupo</string>
    <string name="activity_sobre_label">Sobre o Biblivirti...</string>
    <string name="menu_fragment_materiais_pesquisar">Pesquisar...</string>
    <string name="dialog_novo_editar_conteudo_edit_cocdesc_hint">Descrição (Ex: 01 - Funções do 1º Grau)</string>
    <string name="dialog_novo_editar_conteudo_button_cancelar_text">Cancelar</string>
    <string name="dialog_novo_editar_conteudo_button_salvar_text">Salvar</string>
    <string name="dialog_novo_editar_conteudo_text_descricao_tela_novo">Novo Conteúdo</string>
    <string name="dialog_novo_editar_conteudo_text_descricao_tela_editar">Editar Conteúdo</string>
    <string name="dialog_anexar_linkar_material_text_link">Link</string>
    <string name="dialog_anexar_linkar_material_text_anexo">Anexo</string>
    <string name="dialog_anexar_linkar_material_edit_macurl_hint">Link (Ex: https://www.youtube.com/34AE)</string>
    <string name="dialog_anexar_linkar_material_button_cancelar_text">Cancelar</string>
    <string name="dialog_anexar_linkar_material_button_ok_text">Ok</string>
    <string name="activity_novo_editar_material_label_insert">Novo Material</string>
    <string name="activity_novo_editar_material_label_edit">Editar Material</string>
    <string name="menu_activity_editar_senha_salvar">Salvar</string>
    <string name="adapter_list_pesquisar_usuarios_button_adicionar_remover_usuario_adicionar">Adicionar ao Grupo</string>
    <string name="adapter_list_pesquisar_usuarios_button_adicionar_remover_usuario_remover">Remover do Grupo</string>
    <string name="adapter_list_perfil_grupos_button_sair_participar_sair">Sair do Grupo</string>
    <string name="adapter_list_perfil_grupos_button_sair_participar_participar">Participar do Grupo</string>
    <string name="fragment_membros_button_sair_grupo_text">Sair do Grupo</string>
    <string-array name="dialog_opcoes_grupos_texts">
        <item>Informações do Grupo</item>
        <item>Editar</item>
        <item>Excluir</item>
    </string-array>
    <string-array name="dialog_opcoes_conteudos_texts">
        <item>Editar</item>
        <item>Excluir</item>
    </string-array>
    <string-array name="dialog_opcoes_materiais_texts">
        <item>Compartilhar</item>
        <item>Enviar por e-mail</item>
        <item>Editar</item>
        <item>Excluir</item>
    </string-array>
    <string-array name="dialog_opcoes_membros_texts">
        <item>Ver Perfil</item>
        <item>Enviar E-mail</item>
        <item>Remover do Grupo</item>
    </string-array>
</resources>