<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawer_menu_grupos"
        android:icon="@mipmap/ic_group_50px_gray"
        android:title="@string/menu_drawer_grupos" />
    <item
        android:id="@+id/drawer_menu_perfil"
        android:icon="@mipmap/ic_user_50px_gray"
        android:title="@string/menu_drawer_perfil" />
    <item
        android:id="@+id/drawer_menu_notificacoes"
        android:icon="@mipmap/ic_notification_50px_gray"
        android:title="@string/menu_drawer_notificacoes" />
    <item
        android:id="@+id/drawer_menu_configuracoes"
        android:icon="@mipmap/ic_settings_50px_gray"
        android:title="@string/menu_drawer_configuracoes" />
    <item
        android:id="@+id/drawer_menu_sobre"
        android:icon="@mipmap/ic_info_50px_gray"
        android:title="@string/menu_drawer_sobre" />
    <item
        android:id="@+id/drawer_menu_sair"
        android:icon="@mipmap/ic_exit_50px_gray"
        android:title="@string/menu_drawer_sair" />
</menu>