<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="org.sysmob.biblivirti.activities.SobreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name_full"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_version"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="normal" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/activity_splsh_logo_description"
        android:src="@mipmap/ic_launcher_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_sobre_footer_text"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="normal" />

</LinearLayout>
