<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="org.sysmob.biblivirti.activities.PerfilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/activity_perfil_text_info_usuario"
        android:textColor="@color/colorGrayDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrayDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageUCSFOTO"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription=""
            android:src="@mipmap/ic_app_user_80px"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/editUSCNOME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/activity_perfil_text_nome"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/editUSCLOGN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/activity_perfil_text_login"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/editUSCMAIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/activity_perfil_text_email"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/activity_perfil_text_cadastrado_em"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editGRDCADT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@string/activity_perfil_text_data_cadastro"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorGrayDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/activity_perfil_text_qtd_grupos"
        android:textColor="@color/colorGrayDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrayDark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listGrupos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

</LinearLayout>
