<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/viewLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_link_100px_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dialog_anexar_linkar_material_text_link"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="OU"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/viewAnexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageAnexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_attachment_100px_blue" />

            <TextView
                android:id="@+id/textAnexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dialog_anexar_linkar_material_text_anexo"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editMACURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_anexar_linkar_material_edit_macurl_hint"
            android:inputType="textUri"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_novo_editar_conteudo_button_cancelar_text"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_anexar_linkar_material_button_ok_text"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</LinearLayout>

