<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_topics_100px_blue" />

            <TextView
                android:id="@+id/textDescricaoTela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dialog_novo_editar_conteudo_text_descricao_tela_novo"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/editCOCDESC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_novo_editar_conteudo_edit_cocdesc_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/dialog_novo_editar_conteudo_button_cancelar_text"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonSalvar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/dialog_novo_editar_conteudo_button_salvar_text"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="4dp"
        android:visibility="gone" />

</FrameLayout>